Fix various mobile responsive layout issues (#108)

--- a/source/app/pages/documents/documents.scss
+++ b/source/app/pages/documents/documents.scss
@@ -28,6 +28,7 @@
   justify-content: center;
   position: sticky;
   top: 0;
+  min-height: 102px;
   z-index: 300;
 
   > * {
